--- a/kervi_ui/web/src/index.html
+++ b/kervi_ui/web/src/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <title>KerviUi</title>
   <base href="/">
-
+  <script src="global.js"></script>
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body style="height:100%">
