--- a/kervi_ui/web/src/index.html
+++ b/kervi_ui/web/src/index.html
@@ -2,7 +2,7 @@
 <html style="position: relative;  min-height: 100%;">
 <head>
   <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta http-equiv="X-UA-Compatible" content="IE=EDGE">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <title>Kervi</title>
   <base href="/">
